# labimps

./: Dishwasherrepair-PartBody.3mf  Dishwasherrepair-PartBody.stl  Dishwasherrepair-PartBody_13m_0.20mm_245C_ABS_CR10S.gcode  Dishwasherrepair-PartBody_2h5m_0.10mm_250C_ABS_CR10S.gcode  Dishwasherrepair-PartBody_30m_0.10mm_250C_ABS_CR10S.gcode  Dishwasherrepair.FCStd  Dishwasherrepair.FCStd1  Dishwasherrepair_m02.FCStd  Dishwasherrepair_m02.FCStd1  Dishwasherrepair_m03-PartBody.3mf  Dishwasherrepair_m03-PartBody.stl  Dishwasherrepair_m03-PartBody_1h10m_0.10mm_255C_ABS_CR10S.gcode  Dishwasherrepair_m03-PartBody_33m_0.10mm_250C_ABS_CR10S.gcode  Dishwasherrepair_m03.FCStd  Dishwasherrepair_m03.FCStd1  Dishwasherrepair_m04-PartBody.3mf  Dishwasherrepair_m04-PartBody.stl  Dishwasherrepair_m04-PartBody_1h19m_0.20mm_255C_ABS_CR10S.gcode  Dishwasherrepair_m04.FCStd  Dishwasherrepair_m04.FCStd1  Dishwasherrepair_m05-PartBody.3mf  Dishwasherrepair_m05-PartBody.stl  Dishwasherrepair_m05.FCStd  Dishwasherrepair_m05.FCStd1  README.md  cc2.py  dwbushing-Body.gcode  dwbushing-Body.stl  dwbushing-Body_m02.gcode  dwbushing-Body_m02.stl  dwbushing-Body_m03.gcode  dwbushing-Body_m03.stl  dwbushing-Body_m03x3.gcode  dwbushing.FCStd  dwbushing.FCStd1  dwbushing_m02.FCStd  dwbushing_m02.FCStd1  dwbushing_m03.FCStd  dwbushing_m03.FCStd1  led_tachometer-Cylinder.3mf  (+57 more)
chamber_control/: cabinet.ipynb  chamber_control.ino  chanber_controller Sketch.fzz  chanber_controller Sketch_m2.fzz  chanber_controller Sketch_m3.fzz  platformio.ini
chamber_control/micropython/: cc2.py  chambercontrol.py  main.py  (+3 more)
(+6 files in other folders)
