[tool.poetry]
name = "labimps"
version = "0.1.0"
description = "Lab improvements"
authors = ["wdpfeffer <wdpfeffer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
